# ruff_entry_point_reproducer

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  pyproject.toml
tools/ruff/: BUILD.bazel  constants.bzl  defs.bzl  requirements.txt  runner.template.py
tools/ruff/internal/: BUILD.bazel  factory.bzl
